--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
 <div class="input-container">
   <input (keyup)="onInputChange($event)" placeholder="Write something" [value]="inputValue">
 </div>
-<ng5-slider [(value)]="sliderValue" [options]="sliderOptions" (valueChange)="onSliderChange($event)"></ng5-slider>
+<div class="slider-container">
+  <ng5-slider [(value)]="sliderValue" [options]="sliderOptions" (valueChange)="onSliderChange($event)"></ng5-slider>
+</div>
 <div class="output" class="output-container" [style.width]="getOutputWidth()">
   <p class="output-text-container" [style.font-size.px]="fontSize">{{inputValue}}</p>
 </div>
