--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,12 +16,14 @@
     margin: 0;
     width: 100%;
     height: 40px;
+    border-radius: 2px;
+    border: 1px #6200ee solid;
 }
 
 .output-container {
     margin-top: 1em;
     height: 50px; 
-    border: rebeccapurple 1px solid;
+    border: #6200ee 1px solid;
     border-radius: 2px;
     display: flex;
     justify-content: space-around;
