--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 <div class="output" class="output-container" [style.width]="getOutputWidth()">
   <p class="output-text-container" [style.font-size.px]="fontSize">{{inputValue}}</p>
 </div>
-<div class="actions">
+<div class="actions-container">
   <button (click)="computeStyle()" class="primary">Compute style</button>
   <button (click)="reset()" class="danger">Reset</button>
 </div>
