Refactor actions bar and styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,5 @@
   <p class="output-text-container" [style.font-size.px]="fontSize">{{inputValue}}</p>
 </div>
 <div class="actions-container">
-  <button (click)="computeStyle()" class="primary">Compute style</button>
-  <button (click)="reset()" class="danger reset">Reset</button>
+  <button (click)="reset()" class="danger reset">Clear local storage and reset default</button>
 </div>
