--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,80 +1,83 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .title-container h1 {
-    text-align: center; 
-    font-weight: 100;
+  text-align: center;
+  color: #333;
+  font-weight: 100;
 }
 
-/* TODO: Improve input design */
 .input-container {
-    /* margin: 1em; */
+  display: flex;
+  justify-content: center;
 }
 
 .slider-container {
-    margin-top: 1em;
+  margin-top: 1em;
 }
 
 .input-container > input {
-    margin: 0;
-    width: 100%;
-    height: 40px;
-    border-radius: 2px;
-    border: 1px #6200ee solid;
+  margin: 0;
+  padding: 0 0.5em 0 0.5em;
+  width: 100%;
+  height: 40px;
+  border: 1px #333 solid;
+  border-radius: 2px;
+  font-size: 1.5em;
+  color: #333;
 }
 
 .output-container {
-    margin-top: 1em;
-    height: 50px; 
-    border: #6200ee 1px solid;
-    border-radius: 2px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    /*FIXME*/
-    overflow: scroll;
-    /* MANDATORY */
-    white-space: nowrap;
+  margin-top: 1em;
+  height: 50px;
+  border: #333 1px solid;
+  border-radius: 2px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .output-container p {
-    margin: 0;
+  margin: 0;
+  color: #333;
 }
 
 .actions-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1em;
 }
 
 .actions-container button {
-    margin: 1em;
-    color: #fff;
-    transition: all .15s ease;
-    text-decoration: none;
-    border: none;
-    outline: 0;
-    font-size: 13px;
-    font-weight: 700;
-    text-transform: uppercase;
-    padding: 16px 20px;
-    border-radius: 2px;
-    letter-spacing: .04em;
-    box-shadow: 0 8px 16px rgba(0,0,0,.1), 0 3px 6px rgba(0,0,0,.08);
-    cursor: pointer;
+  margin: 1em;
+  color: #fff;
+  transition: all 0.15s ease;
+  text-decoration: none;
+  border: none;
+  outline: 0;
+  font-size: 13px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 16px 20px;
+  border-radius: 2px;
+  letter-spacing: 0.04em;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+  cursor: pointer;
 }
 
 button:hover {
-    transform: translateY(1px);
-    box-shadow: 0 4px 6px rgba(0,0,0,.12), 0 1px 3px rgba(0,0,0,.08);
+  transform: translateY(1px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
 button.primary {
-    background: #6200ee;
+  background: #6200ee;
 }
 
 button.danger {
-    background: #c51162;
+  background: #c51162;
 }
